syntax = "proto3";

package camera;

option java_package = "com.proto.camera";
option java_multiple_files = true;

message CameraIdentMessage{
  string ID = 1;
  //int32 room = 2;
}

message CameraIdentResponse{
  string cameraInfo = 1;
}

message CameraRequest{
  int32 request = 1;
}

message CameraResponse{
  string result = 1;
}

service CameraService{
  //Unary
  rpc Camera(CameraRequest) returns (CameraResponse){};
  //Server streaming
  rpc CameraIdent(CameraIdentMessage) returns (stream CameraIdentResponse) {}
}